Update run method to seed more tables in database