@@ -19,130 +19,147 @@ public class DatabaseInitializer implements CommandLineRunner {
     private final CrudVenueRepository crudVenueRepository;
     private final CrudMovieRepository crudMovieRepository;
     private final CrudUserRepository crudUserRepository;
+    private final CrudProjectionRepository crudProjectionRepository;
 
 
     @Autowired
     public DatabaseInitializer(CrudCityRepository crudCityRepository, CrudGenreRepository crudGenreRepository,
                                CrudVenueRepository crudVenueRepository, CrudMovieRepository crudMovieRepository,
-                               CrudUserRepository crudUserRepository) {
+                               CrudUserRepository crudUserRepository, CrudProjectionRepository crudProjectionRepository) {
         this.crudCityRepository = crudCityRepository;
         this.crudGenreRepository = crudGenreRepository;
         this.crudVenueRepository = crudVenueRepository;
         this.crudMovieRepository = crudMovieRepository;
         this.crudUserRepository = crudUserRepository;
+        this.crudProjectionRepository = crudProjectionRepository;
     }
 
     @Override
     public void run(String... args) throws Exception {
 
-        if (crudCityRepository.findAll().isEmpty() && crudUserRepository.findAll().isEmpty() &&
-                crudGenreRepository.findAll().isEmpty() && crudMovieRepository.findAll().isEmpty() &&
-                crudVenueRepository.findAll().isEmpty()) {
+//        if (crudCityRepository.findAll().isEmpty() && crudUserRepository.findAll().isEmpty() &&
+//                crudGenreRepository.findAll().isEmpty() && crudMovieRepository.findAll().isEmpty() &&
+//                crudVenueRepository.findAll().isEmpty()) {
 
-            // seed city table
-            CityEntity sarajevo = new CityEntity();
-            CityEntity mostar = new CityEntity();
+        // seed city table
+        CityEntity sarajevo = new CityEntity();
+        CityEntity mostar = new CityEntity();
 
-            sarajevo.setName("Sarajevo");
-            sarajevo.setPostalCode(71000);
-            sarajevo.setCountry("Bosnia and Herzegovina");
-            sarajevo.setCreatedAt(LocalDateTime.now());
-            sarajevo.setUpdatedAt(LocalDateTime.now());
+        sarajevo.setName("Sarajevo");
+        sarajevo.setPostalCode(71000);
+        sarajevo.setCountry("Bosnia and Herzegovina");
+        sarajevo.setCreatedAt(LocalDateTime.now());
+        sarajevo.setUpdatedAt(LocalDateTime.now());
 
-            mostar.setName("Mostar");
-            mostar.setPostalCode(88000);
-            mostar.setCountry("Bosnia and Herzegovina");
-            mostar.setCreatedAt(LocalDateTime.now());
-            mostar.setUpdatedAt(LocalDateTime.now());
+        mostar.setName("Mostar");
+        mostar.setPostalCode(88000);
+        mostar.setCountry("Bosnia and Herzegovina");
+        mostar.setCreatedAt(LocalDateTime.now());
+        mostar.setUpdatedAt(LocalDateTime.now());
 
-            crudCityRepository.saveAll(Arrays.asList(sarajevo, mostar));
+        crudCityRepository.saveAll(Arrays.asList(sarajevo, mostar));
 
-            // seed users table
-            UserEntity user = new UserEntity();
+        // seed users table
+        UserEntity user = new UserEntity();
 
-            user.setFirstName("Avdo");
-            user.setLastName("Sator");
-            user.setEmail("avdo.sator@hotmail.com");
-            user.setPasswordHash("hashed_password");
-            user.setPhone("+38762183628");
-            user.setCityEntity(sarajevo);
-            user.setRole("ROLE_USER");
-            user.setCreatedAt(LocalDateTime.now());
-            user.setUpdatedAt(LocalDateTime.now());
+        user.setFirstName("Avdo");
+        user.setLastName("Sator");
+        user.setEmail("avdo.sator@hotmail.com");
+        user.setPasswordHash("hashed_password");
+        user.setPhone("+38762183628");
+        user.setCityEntity(sarajevo);
+        user.setRole("ROLE_USER");
+        user.setCreatedAt(LocalDateTime.now());
+        user.setUpdatedAt(LocalDateTime.now());
 
-            crudUserRepository.save(user);
+        crudUserRepository.save(user);
 
-            // seed genre table
-            List<GenreEntity> genres = new ArrayList<>();
+        // seed genre table
+        List<GenreEntity> genres = new ArrayList<>();
 
-            GenreEntity action = new GenreEntity();
-            action.setName("action");
-            action.setCreatedAt(LocalDateTime.now());
-            action.setUpdatedAt(LocalDateTime.now());
-            genres.add(action);
+        GenreEntity action = new GenreEntity();
+        action.setName("action");
+        action.setCreatedAt(LocalDateTime.now());
+        action.setUpdatedAt(LocalDateTime.now());
+        genres.add(action);
 
-            GenreEntity drama = new GenreEntity();
-            drama.setName("drama");
-            drama.setCreatedAt(LocalDateTime.now());
-            drama.setUpdatedAt(LocalDateTime.now());
-            genres.add(drama);
+        GenreEntity drama = new GenreEntity();
+        drama.setName("drama");
+        drama.setCreatedAt(LocalDateTime.now());
+        drama.setUpdatedAt(LocalDateTime.now());
+        genres.add(drama);
 
-            GenreEntity comedy = new GenreEntity();
-            comedy.setName("comedy");
-            comedy.setCreatedAt(LocalDateTime.now());
-            comedy.setUpdatedAt(LocalDateTime.now());
-            genres.add(comedy);
+        GenreEntity comedy = new GenreEntity();
+        comedy.setName("comedy");
+        comedy.setCreatedAt(LocalDateTime.now());
+        comedy.setUpdatedAt(LocalDateTime.now());
+        genres.add(comedy);
 
-            GenreEntity thriller = new GenreEntity();
-            thriller.setName("thriller");
-            thriller.setCreatedAt(LocalDateTime.now());
-            thriller.setUpdatedAt(LocalDateTime.now());
-            genres.add(thriller);
+        GenreEntity thriller = new GenreEntity();
+        thriller.setName("thriller");
+        thriller.setCreatedAt(LocalDateTime.now());
+        thriller.setUpdatedAt(LocalDateTime.now());
+        genres.add(thriller);
 
-            crudGenreRepository.saveAll(genres);
+        crudGenreRepository.saveAll(genres);
 
-            // retrieve data due to error
-            List<GenreEntity> allGenres = crudGenreRepository.findAll();
+        List<GenreEntity> allGenres = crudGenreRepository.findAll();
 
-            // seed movie table
-            String[] statuses = {"active", "draft", "archived"};
-            for (int i = 0; i < 20; i++) {
-                MovieEntity movie = new MovieEntity();
-                movie.setTitle("Sample Movie " + (i + 1));
-                movie.setLanguage("English");
-                movie.setDirector("Director");
-                movie.setPgRating("PG-13");
-                movie.setDurationInMinutes(120);
-                movie.setWriters(Arrays.asList("Writer 1", "Writer 2"));
-                movie.setActors(Arrays.asList("Actor 1", "Actor 2"));
-                movie.setImdbRating(7.5 + (i % 2) * 0.5);
-                movie.setRottenTomatoesRating(85 + (i % 2) * 5);
-                movie.setSynopsis("A sample synopsis for the movie.");
-                //movie.setTrailerUrl("http://example.com/trailer" + (i + 1));
-                //movie.setCoverPhotoId(UUID.randomUUID());
-                movie.setStatus(statuses[i % 2]);
-                movie.setCreatedAt(LocalDateTime.now());
-                movie.setUpdatedAt(LocalDateTime.now());
-                movie.setGenreEntities(List.of(allGenres.get(i % genres.size()))); // Assign a genre
+        // seed movie table
+        String[] statuses = {"active", "draft", "archived"};
+        for (int i = 0; i < 20; i++) {
+            MovieEntity movie = new MovieEntity();
+            movie.setTitle("Sample Movie " + (i + 1));
+            //movie.setLanguage("English");
+            //movie.setDirector("Director");
+            //movie.setPgRating("PG-13");
+            movie.setDurationInMinutes(120);
+            //movie.setWriters(Arrays.asList("Writer 1", "Writer 2"));
+            //movie.setActors(Arrays.asList("Actor 1", "Actor 2"));
+            //movie.setImdbRating(7.5 + (i % 2) * 0.5);
+            //movie.setRottenTomatoesRating(85 + (i % 2) * 5);
+            movie.setSynopsis("A sample synopsis for the movie.");
+            //movie.setTrailerUrl("http://example.com/trailer" + (i + 1));
+            //movie.setCoverPhotoId(UUID.randomUUID());
+            movie.setStatus(statuses[i % 2]);
+            movie.setCreatedAt(LocalDateTime.now());
+            movie.setUpdatedAt(LocalDateTime.now());
+            movie.setGenreEntities(List.of(allGenres.get(i % allGenres.size()))); // Assign a genre
 
-                crudMovieRepository.save(movie);
-            }
-
-            // seed venue table
-            for (int i = 1; i <= 6; i++) {
-                VenueEntity venue = new VenueEntity();
-                venue.setName("Sarajevo Venue " + i);
-                venue.setStreet("Example Street");
-                venue.setStreetNumber(String.valueOf(i));
-                venue.setCityEntity(sarajevo);
-                venue.setPhone("987-654-3210");
-                venue.setCreatedAt(LocalDateTime.now());
-                venue.setUpdatedAt(LocalDateTime.now());
-
-                crudVenueRepository.save(venue);
-            }
-            
-            System.out.println("Database seeded successfully");
+            crudMovieRepository.save(movie);
         }
+
+        List<MovieEntity> allMovies = crudMovieRepository.findAll();
+
+        // Seed projections
+        List<ProjectionEntity> projections = new ArrayList<>();
+        for (int i = 0; i < allMovies.size(); i++) {
+            MovieEntity movie = allMovies.get(i);
+            ProjectionEntity projection = new ProjectionEntity();
+            projection.setMovieEntity(movie);
+            projection.setStatus(i < allMovies.size() / 2 ? "active" : "upcoming"); // Half active, half upcoming
+
+            projections.add(projection);
+        }
+
+        // Save projections
+        crudProjectionRepository.saveAll(projections);
+
+        // seed venue table
+        for (int i = 1; i <= 6; i++) {
+            VenueEntity venue = new VenueEntity();
+            venue.setName("Sarajevo Venue " + i);
+            venue.setStreet("Example Street");
+            venue.setStreetNumber(String.valueOf(i));
+            venue.setCityEntity(sarajevo);
+            venue.setPhone("987-654-3210");
+            venue.setCreatedAt(LocalDateTime.now());
+            venue.setUpdatedAt(LocalDateTime.now());
+
+            crudVenueRepository.save(venue);
+        }
+        
+        System.out.println("Database seeded successfully");
     }
+//    }
 }
